Implement OAuth2/OpenID based/inspired login flows
- Implemented frontend and backend implementation for OAuth2 Code flow
  (or similar implementations)
- Added sample configuration for the currently supported identity
  providers: GitHub, Google and Amazon.
- Don't use email as user id, but introduce user table, that maps
  authentication to email/name
- Add bootstrap configuration, that does not swallow exceptions, but
  logs them to the Apache error log
- Updated composer.json to project data and not generic ZendFrame work
  information
- Removed google sign-in library
- Removed image files copied from ZendFramework (unsed)

--- a/pp3/module/Application/view/application/admin/_plugin-listrow.phtml
+++ b/pp3/module/Application/view/application/admin/_plugin-listrow.phtml
@@ -24,7 +24,7 @@ echo '<tr>
     <p>Status: <b>'.$plugin->getStatusTitle().'</b></p>
     <div>
         <p>ArtifactId: <b>'.$plugin->getArtifactId().'</b><p>
-        <p>Author: <b>'.$plugin->getAuthor().'</b><p>
+        <p>Author: <b>'.$plugin->getAuthor()->getName().'</b><p>
         <p>
         <i class="fas fa-asterisk"></i> '.$plugin->getAddedAt()->format('Y-m-d').' &nbsp; &nbsp;
         <i class="fas fa-edit"></i> '.$plugin->getLastUpdatedAt()->format('Y-m-d').' &nbsp; &nbsp; 
@@ -78,7 +78,12 @@ foreach ($plugin->getVersions() as $version) {
                                 <table class="table table-striped">'; 
                             foreach($nbvPv->getVerification()->getVerificationRequests() as $vrq) {
                                 echo '<tr>
-                                        <td>'.$vrq->getVerifier()->getuserId().'</td>
+                                        <td>'
+                                            . htmlentities($vrq->getVerifier()->getName(), ENT_HTML5, 'UTF-8')
+                                            . ' &lt;'
+                                            . htmlentities($vrq->getVerifier()->getEmail(), ENT_HTML5, 'UTF-8')
+                                            . '&gt;'
+                                            .'</td>
                                         <td><span class="badge '.$vrq->getVoteBadgeClass().'" title="'.$vrq->getVoteBadgeTitle().'">'.$vrq->getVoteBadgeTitle().'</span></td>
                                         <td>'.($vrq->getVotedAt() ? $vrq->getVotedAt()->format('Y-m-d') : '').'</td>
                                     </tr>';
