--- a/pp3/module/Application/view/application/index/catalogue.phtml
+++ b/pp3/module/Application/view/application/index/catalogue.phtml
@@ -18,7 +18,7 @@ if ($plugin) {
         }    
         
     echo '</p>
-    <p>Author: <b>'.$plugin->getAuthorName().'</b></p>
+    <p>Author: <b>'.$plugin->getAuthor()->getName().'</b></p>
     <p>License: <b>'.$plugin->getLicense().'</b></p>
     <p>Homepage: <a href="'.$plugin->getHomepage().'">'.$plugin->getHomepage().'</a></p>
     <p>
