--- a/pp3/module/Application/view/application/login/index.phtml
+++ b/pp3/module/Application/view/application/login/index.phtml
@@ -1,16 +1,17 @@
-
-  <div class="row">
-    <div class="col-sm-3">
-      <form action="" method="post">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email</label>
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Heslo</label>
-          <input type="password" class="form-control" id="password" placeholder="Heslo">
-        </div>
-        <button type="submit" class="btn btn-primary">Přihlásit</button>
-      </form>
-    </div>   
-  </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Login Provider</h3>
+    </div>
+    <div class="panel-body">
+        <ul class="list-group" id="loginProviderList">
+            <?php foreach ($this->providers as $p) { ?>
+                <li class="list-group-item">
+                    <a href='<?= htmlentities($p['loginUrl'], ENT_HTML5, 'UTF-8') ?>' style='display: block'>
+                        <div style='background-image: url(<?= htmlentities($p['iconUrl'], ENT_HTML5, 'UTF-8') ?>);' class="providerIcon"></div>
+                        <?= htmlentities($p['name'], ENT_HTML5, 'UTF-8') ?>
+                    </a>
+                </li>
+            <?php } ?>
+        </ul>
+    </div>
+</div>
