--- a/pp3/module/Application/view/layout/layout.phtml
+++ b/pp3/module/Application/view/layout/layout.phtml
@@ -3,7 +3,6 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="google-signin-client_id" content="432862904114-ierlf9j6qmmuhtd44ecmlfqivlirq7uc.apps.googleusercontent.com">
         <?php echo $this->headTitle('Apache NetBeans Plugin Portal ') ?>
 
         <?php
@@ -41,7 +40,6 @@
                         array('conditional' => 'lt IE 9',))
         ;
         ?>
-        <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
         <script type="text/javascript">
             const BASE_URL = '<?= $this->url('home')?>';
         </script>   
@@ -62,36 +60,34 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" id="mynav">
                         <li><a href="<?= $this->url('home') ?>">Plugin Catalog</a></li>
-                        <?php if ($_SESSION['sessionUserId']) { ?>
+                        <?php if ($this->isAuthenticated) { ?>
                         <li><a href="<?= $this->url('plugin') ?>">Add plugin</a></li>
-                        <li ><a href="<?= $this->url('plugin', array('action' => 'list'))?>">My plugins</a></li>
-                        
-                        <?php
-                            if ($_SESSION['isVerifier']) {
-                                echo '<li><a href="'.$this->url('verification', array('action' => 'list')).'">Verification requests</a></li>';
-                            }
-                            ?>
-                            <?php } ?>
-                            <?php
-                        if ($_SESSION['isAdmin']) {
-                            echo '<li><a href="'.$this->url('admin').'">Admin</a></li>';
-                        }
-                        ?>
+                        <li><a href="<?= $this->url('plugin', array('action' => 'list'))?>">My plugins</a></li>
+
+                        <?php } ?>
+                        <?php if ($this->isVerifier) { ?>
+                            <li><a href="<?= $this->url('verification', array('action' => 'list')) ?>">Verification requests</a></li>
+                        <?php } ?>
+                        <?php if ($this->isAdmin) { ?>
+                            <li><a href="<?= $this->url('admin') ?>">Admin</a></li>';
+                        <?php } ?>
                         <li><a href="https://cwiki.apache.org/confluence/display/NETBEANS/How+to+get+plugin+on+Plugin+Portal+Update+Center">Help</a></li>
                     </ul>
-                    <div class="pull-right">
-                        <div style="margin: 7px 20px;">
-                        <?php                        
-                            if (!$_SESSION['sessionUserId']) {                            
-                                echo '<div class="g-signin2" data-onsuccess="onSignIn" approvalprompt="force" ></div>';
+                    <ul class="nav navbar-nav pull-right">
+                        <li>
+                        <?php
+                            if (!(array_key_exists('sessionUserId', $_SESSION) && $_SESSION['sessionUserId'])) {
+                                echo '<a href="'.$this->url('login').'">Login</a>';
                             } else {
-                                echo '<div style = "display:none" align="middle" class="g-signin2" data-cookiepolicy=\'single_host_origin\' data-onsuccess="onSignIn"></div>';
-                                echo '<a href="#" onclick="signOut();" class="btn btn-default" role="button">Sign out '.$_SESSION['sessionUserId'].'</a>';
-                                // echo '<span class="badge" style="display:inline-block;margin-top: 10px;">'.$_SESSION['sessionUserId'].'</a>';
+                                printf('<a href="%s" style="text-align: right; padding: 0.5ex">Logout %s (%s)<br />%s</a>',
+                                       $this->url('login', array('action' => 'logout')),
+                                       htmlentities($this->sessionUserName, ENT_HTML5, 'UTF-8'),
+                                       htmlentities($this->sessionIdp, ENT_HTML5, 'UTF-8'),
+                                       htmlentities($this->sessionUserEmail, ENT_HTML5, 'UTF-8'));
                             }
                         ?>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div><!--/.nav-collapse -->
                
             </div>
