--- a/pp3/public/scss/style.scss
+++ b/pp3/public/scss/style.scss
@@ -97,3 +97,15 @@ body {
         }
     }
 }
+
+.dllink  {
+    color: inherit;
+    &:hover {
+        color: inherit;
+        text-decoration: underline;
+    }
+}
+.verifPopupLink:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
