--- a/pp3/module/Application/view/application/index/catalogue.phtml
+++ b/pp3/module/Application/view/application/index/catalogue.phtml
@@ -112,7 +112,7 @@ if ($plugin) {
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Plugin verificaion log</h4>
+                <h4 class="modal-title" id="myModalLabel">Plugin verification log</h4>
             </div>
             <div class="modal-body" id="verifBody">        
             </div>
