Add favicon to plugin portal
Icon integration follows the sample set by the main apache netbeans
website. The icons and manifest files are copied from the source code
of that website.

--- a/pp3/module/Application/view/layout/layout.phtml
+++ b/pp3/module/Application/view/layout/layout.phtml
@@ -30,6 +30,17 @@
                 ->appendName('viewport', 'width=device-width, initial-scale=1.0')
                 ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
         ?>
+
+        <!-- icons -->
+        <link rel="shortcut icon" type="image/x-icon" href="<?php echo $this->basePath('/favicon.ico'); ?>">
+        <link rel="apple-touch-icon" sizes="180x180" href="<?php echo $this->basePath('/apple-touch-icon.png'); ?>">
+        <link rel="icon" type="image/png" sizes="32x32" href="<?php echo $this->basePath('/favicon-32x32.png'); ?>">
+        <link rel="icon" type="image/png" sizes="16x16" href="<?php echo $this->basePath('/favicon-16x16.png'); ?>">
+        <link rel="manifest" href="<?php echo $this->basePath('/site.webmanifest'); ?>">
+        <link rel="mask-icon" href="<?php echo $this->basePath('/safari-pinned-tab.svg'); ?>" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#ffc40d">
+        <meta name="theme-color" content="#ffffff">
+
         <!-- Le styles -->
         <?php
         echo $this->headLink()
