--- a/pp3/module/Application/view/application/index/catalogue.phtml
+++ b/pp3/module/Application/view/application/index/catalogue.phtml
@@ -65,12 +65,13 @@ if ($plugin) {
         foreach ($plugin->getVersions() as $version) {
             echo '<tr><td><span class="badge">'.$version->getVersion().'</span></td><td>';
             foreach ($version->getNbVersionsPluginVersions() as $nbvPv) {
+                $downloadUrl = './download/'.$version->getId().'/'.htmlspecialchars($version->getArtifactFilename());
                 if ($nbvPv->getVerificationId()) {
                     echo '<span class="badge '.$nbvPv->getVerification()->getStatusBadgeClass().'">
-                    <a href="./download?id='.$version->getId().'" title="Download" target="_blank" class="dllink"><i class="fas fa-download"></i> NB '.$nbvPv->getNbVersion()->getVersion().'</a> 
+                    <a href="'.$downloadUrl.'" title="Download" target="_blank" class="dllink"><i class="fas fa-download"></i> NB '.$nbvPv->getNbVersion()->getVersion().'</a>
                     - <span class="verifPopupLink" data-toggle="modal" data-verification-id="'.$nbvPv->getVerification()->getId().'" data-target="#verifPopup" title="Show verification details">'.$nbvPv->getVerification()->getStatusBadgeTitle().'</span></span> &nbsp; ';
                 } else {
-                    echo '<a href="./download?id='.$version->getId().'" title="Download" target="_blank"><span class="badge badge-brown"><i class="fas fa-download"></i> NB '.$nbvPv->getNbVersion()->getVersion().'</span></a> &nbsp; ';
+                    echo '<a href="'.$downloadUrl.'" title="Download" target="_blank"><span class="badge badge-brown"><i class="fas fa-download"></i> NB '.$nbvPv->getNbVersion()->getVersion().'</span></a> &nbsp; ';
                 }
             }
             echo ' </td></tr>';
