Fix warnings observed while testing update center catalog generation
- the vode* and voteMaster functions of VerificationController delegate
  the business logic to the functions _handleVote and _handleMasterVote.
  The return value of these two functions must not be discarded, but
  returned by the delegating methods.

- the VerificationRequest entity declares, that there its verifier
  property is inversed in User. This is not the case and this caused
  warnings.

- _nbVersion-select.phtml does not initialize the $assignedNbVersions
  array causing warnings about uninitialized variable

--- a/pp3/module/Application/view/partials/_nbVersion-select.phtml
+++ b/pp3/module/Application/view/partials/_nbVersion-select.phtml
@@ -20,6 +20,7 @@
 ?>
 <?php
 $mapping = array();
+$assignedNbVersions = array();
 foreach($this->pluginVersion->getNbVersionsPluginVersions() as $nbvPv) {
     $assignedNbVersions[$nbvPv->getNbVersionId()] = $nbvPv;    
 }
