[NETBEANS-4987] Show details for errors from catalog generation in admin area
When catalog regeneration is requested from the admin area, the
verification errors for all plugins are displayed to the administrator.
This can help to pin point problems in the building process.

The error message includes the names and ids of the problematic plugins
and the details messages of the verification errors.

--- a/pp3/module/Application/view/layout/flash.phtml
+++ b/pp3/module/Application/view/layout/flash.phtml
@@ -27,7 +27,7 @@ $flash->setMessageOpenFormat('<div%s>
 </button>
 <div>')->setMessageCloseString('</div></div>');
 echo $flash->renderCurrent('error', array('alert', 'alert-dismissable', 'alert-danger'));
+echo $flash->renderCurrent('warning', array('alert', 'alert-dismissable', 'alert-warning'));
 echo $flash->renderCurrent('info', array('alert', 'alert-dismissable', 'alert-info'));
 echo $flash->renderCurrent('default', array('alert', 'alert-dismissable', 'alert-info'));
 echo $flash->renderCurrent('success', array('alert', 'alert-dismissable', 'alert-success'));
-?>
