[NETBEANS-4987] Store errors from verification and make the available to plugin owner
The CLI based catalog generation skips plugins, that fail XML
validation. The plugin owner needs to act in this case and to enable the
author to work on this, he needs to be made aware. This change:

- saves the validation errors for display in the web UI
- informs the author by email about the validation problem
- disabled plugin version editing for the affected plugin version
  and removes all plugin version <-> netbeans version assignements

--- a/pp3/module/Application/view/application/plugin-version/_pluginVersion-form.phtml
+++ b/pp3/module/Application/view/application/plugin-version/_pluginVersion-form.phtml
@@ -26,6 +26,7 @@
         <label for="version">Version</label>
         <input type="text" class="form-control" id="version" name="version" placeholder="" value="<?= $this->pluginVersion->getVersion() ?>" readonly="true">
     </div>
+    <?php if (! $this->pluginVersion->getErrorMessage()) { ?>
     <div class="form-group">
         <label for="relnotes">Release notes <span class="text-primary"></span></label>
         <textarea class="form-control" id="relnotes" name="relnotes" rows="5"
@@ -36,3 +37,4 @@
         <?= $this->partial('partials/_nbVersion-select.phtml', 
                 array('nbVersions' => $this->nbVersions, 'pluginVersion' =>$this->pluginVersion, 'verifiedNbVersionIds'=>$this->verifiedNbVersionIds)); ?>
     </div>
+    <?php } ?>
