--- a/pp3/module/Application/view/application/admin/_plugin-listrow.phtml
+++ b/pp3/module/Application/view/application/admin/_plugin-listrow.phtml
@@ -72,14 +72,20 @@ echo '</p>
         <tbody>';
 
 foreach ($plugin->getVersions() as $version) {
-    echo '<tr>
-        <td><span class="badge">'.$version->getVersion().'</span></td>
+    /* @var $version Application\Entity\PluginVersion */
+    printf('<tr>
+        <td><span class="badge %s">%s%s</span></td>
         <td>
-            <a class="btn btn-default" href="'.$this->url('plugin-version',array('action'=>'edit'),array('query' => array('id'=>$version->getId(), 'search'=>$_GET['search']))).'" role="button" title="Edit">
+            <a class="btn btn-default" href="%s" role="button" title="Edit">
                 <i class="fas fa-edit text-primary"></i>
             </a>
         </td>
-        <td>';
+        <td>',
+           $version->getErrorMessage() ? 'badge-red' : '',
+           $version->getVersion(),
+           $version->getErrorMessage() ? ' <i class="fas fa-exclamation-triangle"></i>' : '',
+           $this->url('plugin-version',array('action'=>'edit'),array('query' => array('id'=>$version->getId(), 'search'=>$_GET['search'])))
+    );
     foreach ($version->getNbVersionsPluginVersions() as $nbvPv) {
             echo '<span class="badge badge-brown">NB '.$nbvPv->getNbVersion()->getVersion().'</span>&nbsp; ';
     }    
