--- a/pp3/module/Application/view/application/plugin-version/edit.phtml
+++ b/pp3/module/Application/view/application/plugin-version/edit.phtml
@@ -27,8 +27,16 @@
             echo $this->partial('application/plugin-version/_pluginVersion-form.phtml', 
             array('pluginVersion' => $this->pluginVersion, 'nbVersions' => $this->nbVersions, 'verifiedNbVersionIds' => $this->verifiedNbVersionIds)); 
             ?>
+            <?php
+            if($this->pluginVersion->getErrorMessage()) {
+            echo $this->partial('application/plugin-version/_pluginVersion-error-report.phtml', 
+            array('pluginVersion' => $this->pluginVersion, 'nbVersions' => $this->nbVersions, 'verifiedNbVersionIds' => $this->verifiedNbVersionIds));
+            }
+            ?>
             <a class="btn btn-secondary" href="<?= $this->return ?>" role="button">Return</a>
+            <?php if (! $this->pluginVersion->getErrorMessage()) { ?>
             <button type="submit" class="btn btn-primary">Save Plugin Version</button>
+            <?php } ?>
             </form>
             
         </div>
