--- a/pp3/module/Application/view/application/admin/edit.phtml
+++ b/pp3/module/Application/view/application/admin/edit.phtml
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="col col-sm-6">
                     <form method="post" action="" class="needs-validation" enctype="multipart/form-data">
-                        <?= $this->partial('application/plugin/_plugin-form.phtml', array('plugin' => $this->plugin, 'categories' => $this->categories)); ?>
+                        <?= $this->partial('application/plugin/_plugin-form.phtml', array('plugin' => $this->plugin, 'categories' => $this->categories, 'imageTypes'=>$this->imageTypes, 'editMode' => true)); ?>
                         <a class="btn btn-secondary" href="<?= $this->url('admin') ?>" role="button">Return</a>
                         <button type="submit" class="btn btn-primary">Save Plugin</button>
                     </form>
