--- a/pp3/module/Application/view/application/plugin/confirm.phtml
+++ b/pp3/module/Application/view/application/plugin/confirm.phtml
@@ -23,7 +23,7 @@
         <div class="col col-sm-6">
             <?= $this->partial('layout/flash.phtml'); ?>
             <form method="post" action="" class="needs-validation" enctype="multipart/form-data">
-            <?= $this->partial('application/plugin/_plugin-form.phtml', array('plugin' => $this->plugin, 'categories'=>$this->categories)); ?>
+            <?= $this->partial('application/plugin/_plugin-form.phtml', array('plugin' => $this->plugin, 'categories'=>$this->categories, 'imageTypes'=>$this->imageTypes, 'editMode' => false)); ?>
             <a class="btn btn-secondary" href="../plugin/" role="button">Cancel</a>
             <button type="submit" class="btn btn-primary">Save Plugin</button>
             </form>
